# hand2osc

./: .gitignore  acquire_data.py  debug.py  gesture_to_music.ipynb  hand_tracker.py  lsl_tracker.py  music_experiment.py  pyproject.toml  tf_lite_converter.py
puredata_patches/: neurable_to_oscillator.pd  xon_to_mrt.pd
