[project]
name = "gesture-to-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.1.5",
    "flax>=0.12.7",
    "isort>=8.0.1",
    "jax>=0.10.1",
    "jupyterlab>=4.5.8",
    "jupyterlab-code-formatter>=3.0.3",
    "matplotlib>=3.11.0",
    "mediapipe",
    "opencv-python",
    "optax>=0.2.8",
    "pandas>=3.0.3",
    "python-osc>=1.10.2",
    "tensorflow>=2.21.0",
    "tqdm>=4.68.2",
    "yapf>=0.43.0",
]
